--- a/pom.xml
+++ b/pom.xml
@@ -85,9 +85,9 @@
     </profiles>
 
     <properties>
-        <java.version>1.6</java.version>
+        <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <neo4j.version>1.9.RC2</neo4j.version>
+        <neo4j.version>1.9</neo4j.version>
         <graphaware.dto.version>0.1-SNAPSHOT</graphaware.dto.version>
         <graphaware.tx-event-api.version>0.1-SNAPSHOT</graphaware.tx-event-api.version>
     </properties>
@@ -95,11 +95,6 @@
     <dependencies>
 
         <!-- GraphAware -->
-        <!--<dependency>-->
-            <!--<groupId>com.graphaware</groupId>-->
-            <!--<artifactId>neo4j-utils</artifactId>-->
-            <!--<version>${graphaware.utils.version}</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>com.graphaware</groupId>
             <artifactId>neo4j-dto</artifactId>
