--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <version>7</version>
     </parent>
 
-    <name>Neo4j Relationship Counter</name>
+    <name>GraphAware Neo4j Relationship Counter</name>
     <description>Efficient Relationship Count Cache</description>
     <url>http://graphaware.com</url>
 
@@ -82,14 +82,28 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>intellij-javadoc-fix</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.9</version>
+                        <configuration>
+                            <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
     <properties>
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <neo4j.version>1.9</neo4j.version>
-        <graphaware.dto.version>0.1-SNAPSHOT</graphaware.dto.version>
-        <graphaware.tx-event-api.version>0.1-SNAPSHOT</graphaware.tx-event-api.version>
+        <graphaware.dto.version>0.1</graphaware.dto.version>
+        <graphaware.tx-event-api.version>0.1</graphaware.tx-event-api.version>
     </properties>
 
     <dependencies>
