--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>com.graphaware</groupId>
     <artifactId>neo4j-relcount</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>1.9-1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <parent>
@@ -102,8 +102,8 @@
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <neo4j.version>1.9.1</neo4j.version>
-        <graphaware.dto.version>1.9-1.0-SNAPSHOT</graphaware.dto.version>
-        <graphaware.tx-event-api.version>0.1</graphaware.tx-event-api.version>
+        <graphaware.dto.version>1.9-1.0</graphaware.dto.version>
+        <graphaware.tx-event-api.version>1.9-1.0</graphaware.tx-event-api.version>
     </properties>
 
     <dependencies>
@@ -125,12 +125,14 @@
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j</artifactId>
             <version>${neo4j.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-kernel</artifactId>
             <version>${neo4j.version}</version>
             <type>test-jar</type>
+            <scope>test</scope>
         </dependency>
 
         <!-- Logging -->
