--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <neo4j.version>1.9.1</neo4j.version>
-        <graphaware.dto.version>1.9-1.0</graphaware.dto.version>
+        <graphaware.dto.version>1.9-1.1-SNAPSHOT</graphaware.dto.version>
         <graphaware.tx-event-api.version>1.9-1.0</graphaware.tx-event-api.version>
     </properties>
 
