--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,10 @@
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <neo4j.version>1.9.1</neo4j.version>
-        <graphaware.framework.version>1.9-1.0-SNAPSHOT</graphaware.framework.version>
+        <graphaware.framework.version>1.9-1.1-SNAPSHOT</graphaware.framework.version>
+        <graphaware.utils.version>1.9-1.3</graphaware.utils.version>
+        <graphaware.tx-event-api.version>1.9-1.2</graphaware.tx-event-api.version>
+        <graphaware.dto.version>1.9-1.1</graphaware.dto.version>
     </properties>
 
     <dependencyManagement>
@@ -127,6 +130,24 @@
                 <groupId>com.graphaware</groupId>
                 <artifactId>neo4j-framework</artifactId>
                 <version>${graphaware.framework.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.graphaware</groupId>
+                <artifactId>neo4j-utils</artifactId>
+                <version>${graphaware.utils.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.graphaware</groupId>
+                <artifactId>neo4j-tx-event-api</artifactId>
+                <version>${graphaware.tx-event-api.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.graphaware</groupId>
+                <artifactId>neo4j-dto</artifactId>
+                <version>${graphaware.dto.version}</version>
             </dependency>
 
             <!-- Neo4j -->
