--- a/relcount-full/pom.xml
+++ b/relcount-full/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>relcount-common</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.graphaware</groupId>
+            <artifactId>relcount-common</artifactId>
+            <classifier>tests</classifier>
+        </dependency>
+
         <!-- GraphAware -->
         <dependency>
             <groupId>com.graphaware</groupId>
