--- a/relcount-full/src/test/resources/neo4j.properties
+++ b/relcount-full/src/test/resources/neo4j.properties
@@ -1,14 +1,14 @@
 # properties for a neo4j store for automated tests
 
-all_stores_total_mapped_memory_size=5G
+all_stores_total_mapped_memory_size=7G
 dump_configuration=true
 keep_logical_logs=false
 log_mapped_memory_stats=true
 log_mapped_memory_stats_interval=100000
-neostore.nodestore.db.mapped_memory=1G
-neostore.propertystore.db.arrays.mapped_memory=100M
-neostore.propertystore.db.index.keys.mapped_memory=100M
-neostore.propertystore.db.index.mapped_memory=100M
-neostore.propertystore.db.mapped_memory=500M
-neostore.propertystore.db.strings.mapped_memory=2G
-neostore.relationshipstore.db.mapped_memory=1G
+neostore.nodestore.db.mapped_memory=2M
+neostore.propertystore.db.arrays.mapped_memory=1M
+neostore.propertystore.db.index.keys.mapped_memory=200M
+neostore.propertystore.db.index.mapped_memory=20M
+neostore.propertystore.db.mapped_memory=3G
+neostore.propertystore.db.strings.mapped_memory=1M
+neostore.relationshipstore.db.mapped_memory=3G
