--- a/pom.xml
+++ b/pom.xml
@@ -109,10 +109,10 @@
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <neo4j.version>1.9.1</neo4j.version>
-        <graphaware.framework.version>1.9-1.1-SNAPSHOT</graphaware.framework.version>
-        <graphaware.utils.version>1.9-1.3</graphaware.utils.version>
-        <graphaware.tx-event-api.version>1.9-1.3-SNAPSHOT</graphaware.tx-event-api.version>
-        <graphaware.dto.version>1.9-1.2-SNAPSHOT</graphaware.dto.version>
+        <graphaware.framework.version>1.9-1.2-SNAPSHOT</graphaware.framework.version>
+        <graphaware.utils.version>1.9-1.4-SNAPSHOT</graphaware.utils.version>
+        <graphaware.tx-event-api.version>1.9-1.5-SNAPSHOT</graphaware.tx-event-api.version>
+        <graphaware.dto.version>1.9-1.3-SNAPSHOT</graphaware.dto.version>
     </properties>
 
     <dependencyManagement>
