--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <neo4j.version>1.9.1</neo4j.version>
-        <graphaware.framework.version>1.9-1.3-SNAPSHOT</graphaware.framework.version>
+        <graphaware.framework.version>1.9-1.3</graphaware.framework.version>
     </properties>
 
     <dependencies>
