--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,5 +1,6 @@
 # Root logger option
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=WARN, stdout
+log4j.logger.com.graphaware.performance=DEBUG
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
