--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <neo4j.version>1.9.4</neo4j.version>
-        <graphaware.framework.version>1.9-1.8-SNAPSHOT</graphaware.framework.version>
+        <graphaware.framework.version>1.9-1.8</graphaware.framework.version>
     </properties>
 
     <dependencies>
@@ -143,18 +143,6 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
-        </dependency>
-
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>1.8</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.esotericsoftware.kryo</groupId>
-            <artifactId>kryo</artifactId>
-            <version>2.16</version>
         </dependency>
 
         <!-- Testing -->
