relcount becoming a separate module again, new framework

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=WARN, stdout
+log4j.rootLogger=INFO, stdout
 log4j.logger.com.graphaware.performance=DEBUG
 
 # Direct log messages to stdout
