--- a/pom.xml
+++ b/pom.xml
@@ -14,189 +14,48 @@
   ~ <http://www.gnu.org/licenses />.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>7</version>
+        <groupId>com.graphaware.neo4j</groupId>
+        <artifactId>framework-parent</artifactId>
+        <version>1.9-1.9-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.graphaware</groupId>
-    <artifactId>neo4j-relcount</artifactId>
-    <version>1.9-1.5-SNAPSHOT</version>
+    <artifactId>relcount</artifactId>
     <packaging>jar</packaging>
 
     <name>GraphAware Relationship Count Module</name>
-    <description>Efficient Relationship Counting</description>
+    <description>GraphAware Runtime Module for Efficient Relationship Counting</description>
     <url>http://graphaware.com</url>
-
-    <licenses>
-        <license>
-            <name>GNU General Public License, version 3</name>
-            <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
-
-    <scm>
-        <connection>scm:git:git@github.com:graphaware/neo4j-relcount.git</connection>
-        <developerConnection>scm:git:git@github.com:graphaware/neo4j-relcount.git</developerConnection>
-        <url>git@github.com:graphaware/neo4j-relcount.git</url>
-    </scm>
-
-    <developers>
-        <developer>
-            <id>bachmanm</id>
-            <name>Michal Bachman</name>
-            <email>neo4j-relcount@graphaware.org</email>
-        </developer>
-    </developers>
-
-    <profiles>
-        <profile>
-            <id>release-sign-artifacts</id>
-            <activation>
-                <property>
-                    <name>performRelease</name>
-                    <value>true</value>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.1</version>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>intellij-javadoc-fix</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.9</version>
-                        <configuration>
-                            <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
-    <properties>
-        <java.version>1.7</java.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <neo4j.version>1.9.4</neo4j.version>
-        <graphaware.framework.version>1.9-1.8</graphaware.framework.version>
-    </properties>
 
     <dependencies>
 
-        <!-- GraphAware -->
         <dependency>
-            <groupId>com.graphaware</groupId>
-            <artifactId>neo4j-framework</artifactId>
-            <version>${graphaware.framework.version}</version>
+            <groupId>com.graphaware.neo4j</groupId>
+            <artifactId>runtime</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.graphaware</groupId>
-            <artifactId>neo4j-framework</artifactId>
-            <version>${graphaware.framework.version}</version>
+            <groupId>com.graphaware.neo4j</groupId>
+            <artifactId>runtime</artifactId>
             <scope>test</scope>
             <classifier>tests</classifier>
         </dependency>
 
-        <!-- Neo4j -->
         <dependency>
-            <groupId>org.neo4j</groupId>
-            <artifactId>neo4j</artifactId>
-            <version>${neo4j.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-kernel</artifactId>
-            <version>${neo4j.version}</version>
-            <type>test-jar</type>
-            <scope>test</scope>
+            <groupId>com.graphaware.neo4j</groupId>
+            <artifactId>common</artifactId>
         </dependency>
 
-        <!-- Logging -->
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <groupId>com.graphaware.neo4j</groupId>
+            <artifactId>common</artifactId>
+            <classifier>tests</classifier>
         </dependency>
 
-        <!-- Testing -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.10</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>1.9.0</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9</version>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 </project>
