--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,11 @@
     <parent>
         <groupId>com.graphaware.neo4j</groupId>
         <artifactId>framework-parent</artifactId>
-        <version>1.9-1.9-SNAPSHOT</version>
+        <version>2.0.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>relcount</artifactId>
+    <version>2.0.2.1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>GraphAware Relationship Count Module</name>
@@ -40,20 +41,12 @@
 
         <dependency>
             <groupId>com.graphaware.neo4j</groupId>
-            <artifactId>runtime</artifactId>
-            <scope>test</scope>
-            <classifier>tests</classifier>
-        </dependency>
-
-        <dependency>
-            <groupId>com.graphaware.neo4j</groupId>
             <artifactId>common</artifactId>
         </dependency>
 
         <dependency>
             <groupId>com.graphaware.neo4j</groupId>
-            <artifactId>common</artifactId>
-            <classifier>tests</classifier>
+            <artifactId>tests</artifactId>
         </dependency>
 
     </dependencies>
