--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,11 @@
     <parent>
         <groupId>com.graphaware.neo4j</groupId>
         <artifactId>framework-parent</artifactId>
-        <version>2.0.2.1-SNAPSHOT</version>
+        <version>2.0.3.2</version>
     </parent>
 
     <artifactId>relcount</artifactId>
-    <version>2.0.2.1.1-SNAPSHOT</version>
+    <version>2.0.3.2.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>GraphAware Relationship Count Module</name>
