--- a/pom.xml
+++ b/pom.xml
@@ -118,9 +118,9 @@
     <properties>
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <neo4j.version>2.0.3</neo4j.version>
+        <neo4j.version>2.1.2</neo4j.version>
         <spring.version>4.0.0.RELEASE</spring.version>
-        <graphaware.version>2.0.3.6</graphaware.version>
+        <graphaware.version>2.1.2.8-SNAPSHOT</graphaware.version>
     </properties>
 
     <dependencies>
@@ -144,6 +144,24 @@
             <artifactId>neo4j</artifactId>
             <version>${neo4j.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.7</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
