--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.graphaware.neo4j</groupId>
     <artifactId>relcount</artifactId>
-    <version>2.1.2.10.3-SNAPSHOT</version>
+    <version>2.1.3.10.3-SNAPSHOT</version>
 
     <name>GraphAware Relationship Count Module</name>
     <description>GraphAware Runtime Module for Efficient Relationship Counting</description>
@@ -118,9 +118,9 @@
     <properties>
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <neo4j.version>2.1.2</neo4j.version>
+        <neo4j.version>2.1.3</neo4j.version>
         <spring.version>4.0.0.RELEASE</spring.version>
-        <graphaware.version>2.1.2.10-SNAPSHOT</graphaware.version>
+        <graphaware.version>2.1.3.10</graphaware.version>
     </properties>
 
     <dependencies>
