--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.graphaware.neo4j</groupId>
     <artifactId>relcount</artifactId>
-    <version>2.1.3.10.4-SNAPSHOT</version>
+    <version>2.1.3.11.4-SNAPSHOT</version>
 
     <name>GraphAware Relationship Count Module</name>
     <description>GraphAware Runtime Module for Efficient Relationship Counting</description>
@@ -120,7 +120,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <neo4j.version>2.1.3</neo4j.version>
         <spring.version>4.0.0.RELEASE</spring.version>
-        <graphaware.version>2.1.3.11-SNAPSHOT</graphaware.version>
+        <graphaware.version>2.1.3.11</graphaware.version>
     </properties>
 
     <dependencies>
@@ -221,7 +221,7 @@
                 <version>2.9</version>
                 <configuration>
                     <links>
-                        <link>http://api.neo4j.org/2.0.3/</link>
+                        <link>http://api.neo4j.org/2.1.3/</link>
                         <link>http://graphaware.com/site/framework/latest/apidocs/</link>
                     </links>
                 </configuration>
