upgrade to FW 2.1.4.18, allow specifying inclusion strategies using properties file

--- a/src/test/resources/neo4j.properties
+++ b/src/test/resources/neo4j.properties
@@ -32,3 +32,5 @@ keep_logical_logs=true
 
 com.graphaware.runtime.enabled=true
 com.graphaware.module.relcount.1=com.graphaware.module.relcount.bootstrap.RelcountModuleBootstrapper
+com.graphaware.module.relcount.relationship=isType('R1')
+com.graphaware.module.relcount.relationship.property=key != 'timestamp'
