--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.graphaware.neo4j</groupId>
     <artifactId>relcount</artifactId>
-    <version>2.1.4.18.7-SNAPSHOT</version>
+    <version>2.1.4.19.7-SNAPSHOT</version>
 
     <name>GraphAware Relationship Count Module</name>
     <description>GraphAware Runtime Module for Efficient Relationship Counting</description>
@@ -120,7 +120,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <neo4j.version>2.1.4</neo4j.version>
         <spring.version>4.0.0.RELEASE</spring.version>
-        <graphaware.version>2.1.4.18</graphaware.version>
+        <graphaware.version>2.1.4.19-SNAPSHOT</graphaware.version>
     </properties>
 
     <dependencies>
