--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.graphaware.neo4j</groupId>
     <artifactId>relcount</artifactId>
-    <version>2.1.4.19.7-SNAPSHOT</version>
+    <version>2.1.4.19.7</version>
 
     <name>GraphAware Relationship Count Module</name>
     <description>GraphAware Runtime Module for Efficient Relationship Counting</description>
