--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <neo4j.version>2.1.5</neo4j.version>
         <spring.version>4.1.1.RELEASE</spring.version>
-        <graphaware.version>2.1.5.21-SNAPSHOT</graphaware.version>
+        <graphaware.version>2.1.5.21</graphaware.version>
     </properties>
 
     <dependencies>
@@ -221,7 +221,7 @@
                 <version>2.9</version>
                 <configuration>
                     <links>
-                        <link>http://api.neo4j.org/2.1.4/</link>
+                        <link>http://api.neo4j.org/2.1.5/</link>
                         <link>http://graphaware.com/site/framework/latest/apidocs/</link>
                     </links>
                 </configuration>
