--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>com.graphaware.neo4j</groupId>
         <artifactId>module-parent</artifactId>
-        <version>2.2.0.29-SNAPSHOT</version>
+        <version>2.2.0.29</version>
     </parent>
 
     <name>GraphAware Relationship Count Module</name>
