--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>relcount</artifactId>
-    <version>2.2.1.30.9</version>
+    <version>2.2.1.30.10-SNAPSHOT</version>
 
     <parent>
         <groupId>com.graphaware.neo4j</groupId>
